<resources>
    <string name="app_name">Asteroid Radar</string>

    <string name="common_ok">OK</string>
    <string name="exit_dialog_title">Exit from app?</string>
    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="hazardous">HAZARDOUS</string>
    <string name="hazardous_not">NOT HAZARDOUS</string>

    <!-- main fragment !-->
    <string name="main_app_bar">List</string>
    <string name="volume">volume</string>
    <string name="info">Info</string>


    <!-- info fragment !-->
    <string name="info_app_bar">Info</string>
    <string name="music_hint">Music</string>
    <string name="background_hint">Background</string>
    <string name="music_link">https://soundcloud.com/ccpgames/eve-online-but-still-we-go-on</string>
    <string name="background_link">https://pa1.narvii.com/7239/f325bd0471d66cab8af9af46718cb8769d4718ebr1–500–500_hq.gif</string>

</resources>
