<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_volume"
        android:icon="@drawable/ic_baseline_volume_up_24"
        android:title="@string/volume"
        app:showAsAction="ifRoom"
        android:orderInCategory="0"/>

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/info"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/show_all_menu"
        android:title="@string/next_week_asteroids" />
    <item
        android:id="@+id/show_rent_menu"
        android:title="@string/today_asteroids" />
    <item
        android:id="@+id/show_buy_menu"
        android:title="@string/saved_asteroids" />

</menu>