<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="asteroid"
            type="com.udacity.asteroidradar.db.entity.AsteroidDB" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:background="@android:color/black">

            <ImageView
                android:id="@+id/activity_main_image_of_the_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:asteroidStatusImage="@{asteroid.potentiallyHazardous}"
                android:alpha="0.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/asteroid_safe" />
            <com.udacity.asteroidradar.customview.ViewField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/close_approach_data_title"
                app:content="@{asteroid.closeApproachDate}"/>
            <com.udacity.asteroidradar.customview.ViewField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/absolute_magnitude_title"
                app:content="@{@string/astronomical_unit_format(asteroid.absoluteMagnitude)}"/>
            <com.udacity.asteroidradar.customview.ViewField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/estimated_diameter_title"
                app:content="@{@string/km_unit_format(asteroid.estimatedDiameter)}"/>
            <com.udacity.asteroidradar.customview.ViewField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/relative_velocity_title"
                app:content="@{@string/km_s_unit_format(asteroid.relativeVelocity)}"/>
            <com.udacity.asteroidradar.customview.ViewField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/distance_from_earth_title"
                app:content="@{@string/astronomical_unit_format(asteroid.distanceFromEarth)}"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>